--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,47 @@
-node_modules/
-.next/
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# Dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# Testing
+/coverage
+
+# Next.js build output
+/.next/
+/out/
+
+# Production build files
+/build
+
+# Vercel
+.vercel
+
+# Static site generator next.js export files
+/out/
+
+# dotenv environment variables file
 .env
-.env.local
-.DS_Store
+.env*.local
+*.env
+
+# Debug log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Editor directories and files
+.vscode*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.sublime-workspace
+
+# Miscellaneous
+.DS_Store
+*.pem
+
+# TypeScript cache file
+*.tsbuildinfo
