--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.0.0",
+    "framer-motion": "^12.23.24",
+    "lucide-react": "^0.545.0",
     "next": "^14.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-hook-form": "^7.65.0",
     "react-lottie-player": "^1.0.0",
-    "tailwindcss": "^3.0.0"
+    "tailwindcss": "^3.0.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@types/react": "19.2.2",
