--- a/package.json
+++ b/package.json
@@ -20,7 +20,12 @@
     "react-hook-form": "^7.65.0",
     "react-lottie-player": "^1.0.0",
     "tailwindcss": "^3.0.0",
-    "zod": "^4.1.12"
+    "zod": "^4.1.12",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "recharts": "^2.12.7",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/react": "19.2.2",
